syntax = "proto3";

package file.v1;

option go_package = "./grpcapp";

message DeleteFileByIdParam {
  string file_id = 1;
}

message DeleteFileByIdResult {
  int32 code = 1;
  string message = 2;
  DeleteFileByIdData data = 3;
}

message DeleteFileByIdData {
  int64 deleted_at = 1;
}

message RetrieveFileByIdParam {
  string file_id = 1;
}

message RetrieveFileByIdResult {
  int32 code = 1;
  string message = 2;
  bytes chunks = 3;
}

message UploadFileParam {
  oneof data {
    bytes chunks = 1;
    UploadFileInfo info = 2;
  }
}

message UploadFileInfo {
  string name = 1;
  string mimetype = 2;
  string extension = 3;
}

message UploadFileResult {
  int32 code = 1;
  string message = 2;
  UploadFileData data = 3;
}

message UploadFileData {
  string id = 1;
  string name = 2;
  string path = 3;
  string mimetype = 4;
  string extension = 5;
  int64 size = 6;
  int64 uploaded_at = 7;
}

service FileService {
  rpc DeleteFileById(DeleteFileByIdParam) returns (DeleteFileByIdResult);
  rpc RetrieveFileById(RetrieveFileByIdParam) returns (stream RetrieveFileByIdResult);
  rpc UploadFile(stream UploadFileParam) returns (UploadFileResult);
}
